[package]
name = "web-push"
description = "Web push notification client with support for http-ece encryption and VAPID authentication."
version = "0.9.2"
authors = ["Julius de Bruijn <julius+github@nauk.io>", "Andrew Ealovega <Andrew@Ealovega.dev>"]
license = "Apache-2.0"
homepage = "https://github.com/pimeys/rust-web-push"
repository = "https://github.com/pimeys/rust-web-push"
documentation = "https://docs.rs/web-push/"
readme = "README.md"
keywords = ["web-push", "http-ece", "vapid"]
categories = ["web-programming", "asynchronous"]
edition = "2021"

[features]
default = ["isahc", "futures-lite/futures-io"] #futures are only used for read_to_end() in isach client.
hyper-client = ["hyper", "hyper-tls"] #use features = ["hyper-client"], default-features = false for about 300kb size decrease.

[dependencies]
hyper = { version = "^0.14", features = ["client", "http1"], optional = true }
hyper-tls = { version = "^0.5", optional = true }
isahc = { version = "^1.4.0", optional = true }
futures-lite = { version = "^1.12", optional = true }
http = "^0.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
jwt-simple = "0.11.2"
ece = "^2.1"
pem = "1.1.0"
sec1_decode = "^0.1.0"
base64 = "^0.13"
chrono = "^0.4"
log = "^0.4"

[dev-dependencies]
argparse = "^0.2"
regex = "^1.5"
tokio = { version = "^1.1", features = ["macros", "rt-multi-thread"] }
lazy_static = "^1.4"
